--- a/client/src/style/generalCSS.scss
+++ b/client/src/style/generalCSS.scss
@@ -10,6 +10,12 @@ ul {
   margin: 0;
 }
 
+h1 {
+  /*Texte*/
+  font-size: 48px;
+  font-weight: 500;
+}
+
 .elm_ct {
   /*Display*/
   display: flex;
