--- a/client/src/style/composents/activity/ChartSpider.scss
+++ b/client/src/style/composents/activity/ChartSpider.scss
@@ -1,1 +1,9 @@
 @use "../../variables.scss" as *;
+
+.chart_spider_ctn {
+  /*Texte*/
+  font-size: 12px;
+
+  /*Style*/
+  background-color: #282d30;
+}
