--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,7 +25,7 @@ body {
 
   /*Dimensions*/
   min-width: 1024px;
-  min-height: 780px;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  width: 100%;
+  height: 100%;
 }
