--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -6,4 +6,18 @@
   margin: 91px 0px 0px 117px;
   padding: 50px 100px;
   box-sizing: border-box;
+
+  /*Display*/
+  display: flex;
+  gap: 80px;
+}
+
+.act_alm_ctn {
+  /*Position*/
+  position: relative;
+
+  /*Display*/
+  display: flex;
+  gap: 50px;
+  flex-wrap: wrap;
 }
