--- a/client/src/style/composents/activity/ChartBar.scss
+++ b/client/src/style/composents/activity/ChartBar.scss
@@ -2,7 +2,7 @@
 
 .chart_bar_ctn {
   /*Dimensions*/
-  max-width: 835px;
+  width: 100%;
   height: 320px;
   padding: 30px;
   box-sizing: border-box;
