--- a/client/src/style/composents/alimentation/Alimentation.scss
+++ b/client/src/style/composents/alimentation/Alimentation.scss
@@ -1,9 +1,19 @@
 @use "../../variables.scss" as *;
 
 .alim_ctn {
-  /*Dimensions*/
-
   /*Display*/
+  grid-column: 2;
+  grid-row: 1/3;
   display: flex;
   justify-content: space-between;
+}
+
+@media (max-width: $small-size) {
+  .alim_ctn {
+    /*Display*/
+    grid-column: 2;
+    grid-row: 2;
+    gap: 25px;
+    justify-content: start;
+  }
 }
