--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -6,3 +6,6 @@ $gry: rgba(222, 222, 222, 1);
 $drk-gry: rgba(116, 121, 140, 1);
 $blk: rgba(2, 2, 3, 1);
 $wht: rgba(255, 255, 255, 1);
+
+/*Taille écran*/
+$small-size: 1350px;
