--- a/client/src/style/composents/vertical_bar/VerticalBar.scss
+++ b/client/src/style/composents/vertical_bar/VerticalBar.scss
@@ -12,8 +12,15 @@
 
   /*Style*/
   background-color: $blk;
+}
+
+.ver_btn_ctn {
+  /*Position*/
+  position: absolute;
+  top: 347px;
 
   /*Display*/
+  display: flex;
   gap: 20px;
 }
 
